re PR target/19334 (darwin backend places some CONST_DECLs in the wrong section)

2005-01-12  Andrew Pinski  <pinskia@physics.uc.edu>

        PR target/19334
        * config/darwin.c (machopic_select_section): Use TYPE_SIZE_UNIT instead
        of TYPE_SIZE where we mean the number of bytes.

From-SVN: r93243